# ChangeLog for media-libs/mesa
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.259 2010/01/18 20:34:55 armin76 Exp $

  18 Jan 2010; Raúl Porcel <armin76@gentoo.org> mesa-7.5.2.ebuild:
  alpha/ia64/sh/sparc stable wrt #294958

  14 Jan 2010; Markus Meier <maekke@gentoo.org> mesa-7.5.2.ebuild:
  arm stable, bug #294958

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> mesa-7.5.2.ebuild:
  Stable for HPPA (bug #294958).

  28 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> mesa-7.7-r1.ebuild:
  Fix typing error wrt #298805.

*mesa-7.7-r1 (28 Dec 2009)

  28 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> -mesa-7.7.ebuild,
  +mesa-7.7-r1.ebuild:
  Revision bump to make sure everyone has disabled gallium intel.

  27 Dec 2009; Joseph Jezak <josejx@gentoo.org> mesa-7.5.2.ebuild:
  Marked ppc stable for bug #294958.

  26 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> mesa-7.7.ebuild:
  Do not depend on xorg-server.

  24 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> mesa-7.7.ebuild:
  Rdepend on xorg-server[-minimal]. Thx to Tommy for reporting.

  22 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> mesa-7.7.ebuild:
  Sync with in-overlay updates prepared for 7.7 final release.

  22 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  -mesa-7.6.1_rc4.ebuild, -mesa-7.7_rc3.ebuild:
  Remove old rcs (forgot to cvs rm them with previous commit)

*mesa-7.7 (22 Dec 2009)
*mesa-7.6.1 (22 Dec 2009)

  22 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  +files/0001-st-xorg-Adopt-to-new-dirty-clip-rect-type.patch,
  +mesa-7.6.1.ebuild, +mesa-7.7.ebuild:
  Bump to 7.6.1 (with a patch to fix bug 297891) and 7.7 (fixes bug 297807)

  16 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> mesa-7.7_rc3.ebuild:
  Fix S location.

*mesa-7.7_rc3 (16 Dec 2009)
*mesa-7.6.1_rc4 (16 Dec 2009)

  16 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> -mesa-7.3-r1.ebuild,