@@ -1,13 +1,11 @@
 AUX 0001-st-xorg-Adopt-to-new-dirty-clip-rect-type.patch 1135 RMD160 55c85bcf2ae92c9039f4394c07271863d5fb8c69 SHA1 4c29e61a096bcda471dc4ceb68712f937c1f08f8 SHA256 0c494b66f452d38e0012a5604da50e74779cd0e10c3e7408d797cd1f1ab0fc62
 AUX lib/libGL.la 729 RMD160 b89950051dfa9d02824eb0b15858855016f92dcc SHA1 32c0aabf00f1590aa7aeca75955b80a04c6c7f15 SHA256 f5e62da033bfb72a56d6290d6030df4d5f687acea456a8f31a765c0c4f532606
 AUX lib/libGLU.la 743 RMD160 34e3adc8e0422a5477a9eaa0fee141e577afeee4 SHA1 c131df3a61b7f193e8a8cea3feeb1f9ff0f1ea7d SHA256 0a8efb7cd557598607ede88af6442574a6999689ddbb7f0f3cbaf53734bfa284
-DIST MesaLib-7.5.1.tar.bz2 4382803 RMD160 bccf6f52fce3b3c7ac6525444f907e3c2fe790c2 SHA1 26171fb4de23a21431861d6663203e400df45bf7 SHA256 48f21e5a91a82fa9fb6d0bc5ae72d9d9cc1824429dcfc759cfcc1a44e3e1440a
 DIST MesaLib-7.5.2.tar.bz2 4387185 RMD160 0dc74e90afc08bde5b5e714bfb966d5b0750d84e SHA1 582141f8d28267f208c4747bd80689e32cdd6f32 SHA256 8b232fd2e7d8de5e4778f27ef11f7ff8c42c3815efc92144215734378b55e1ad
 DIST MesaLib-7.6.1.tar.bz2 4886995 RMD160 c2bea0898ecfe72a05e64f9021400147ae3e9d6b SHA1 6d99fca5f362d51a95401b4392542eb222e3d0f8 SHA256 701f0e4cb85d6298181651b780d1c0a439fadd02aad29ee6623fc05588bb8d44
 DIST MesaLib-7.7.tar.bz2 5000637 RMD160 7edcba70e4e9bb1c6724c43e916c6e4c3e90c0dc SHA1 dc104df86f1cf777dac0bdbe8fd0a43c37918b66 SHA256 6252d7d4190b47f70d0e4ec0edbd5a70f2261c5f6e66859e5fd2572c1df6357a
-EBUILD mesa-7.5.1.ebuild 7692 RMD160 cfbc21986990627d9a99e27d57500eeee2f4008a SHA1 d040934dbfc2824ca24dbd3318b049d9a3bd7ca7 SHA256 c107a62f56db25fcf4e23c0045d562231dbc9c9ff921c9679f66c70be879006f
 EBUILD mesa-7.5.2.ebuild 7691 RMD160 483cf8426096b4836b2829c623a108f4008bd8ed SHA1 786e3df77391a76ba2c3ddb39e05a71477ae8a1c SHA256 96b2d79b0f9a1f3bd3f4060c2de82aa0060bd37f5e0955b374ae2b63fc7e0134
 EBUILD mesa-7.6.1.ebuild 6578 RMD160 baa8791f9d7afee3e1d9b3d615eb00c4858a14a8 SHA1 2e87a9195a62e20487bf24736b7eaa2b75558f91 SHA256 d858bdbf7e73c757a5bfe2de97e0191b3c3cd0fe82ff1bf45f2ab5785c9ede7a
 EBUILD mesa-7.7-r1.ebuild 5903 RMD160 983caee61556e08f86dde15840bed94410a11685 SHA1 2254eae75212dbd1838903acb78eec66a3ee8391 SHA256 360d688801949e5205d9138ec444aa716b25f3d437e78970e6cfee031301790f
-MISC ChangeLog 45734 RMD160 161ce8cd2bc32a43435b841c64268430e8be19b2 SHA1 5cfc30a25f03f7aa80958d3a660ebc79cc6932fb SHA256 af74e8bf6f4ceb991717435fe7924a63ff633c2104023d8532f4b172bdecb0bb
+MISC ChangeLog 45817 RMD160 a3f8f6bfd14532acf582ac91a2a37ace0e099192 SHA1 b19617626a5bd06d433eab86b79bd329f9e15e9b SHA256 e0f8d0cd7bdd8e3ab177a24c6297764cbae4a0ee619048d2382055ad1e191b76
 MISC metadata.xml 344 RMD160 2a7cf045329a3141e5ae1396b497ca0e98a1888b SHA1 b730806d6fa2db3bada9e66dd6b93b9e40d6dfea SHA256 849997a7912f4428382a3bdc6b6b6bdb2928048a274fa865b3c89cd3e89e6dde
