@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/mesa
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.259 2010/01/18 20:34:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.260 2010/01/23 18:28:50 scarabeus Exp $
+
+  23 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org> -mesa-7.5.1.ebuild:
+  rm
 
   18 Jan 2010; Raúl Porcel <armin76@gentoo.org> mesa-7.5.2.ebuild:
   alpha/ia64/sh/sparc stable wrt #294958
